--- a/CSS/index.scss
+++ b/CSS/index.scss
@@ -127,7 +127,9 @@ section#aboutme {
     }
         h1{
             height: 100%;
-            font-size: 100px;
+            // font-size: 100px;
+            font-size: 64px;
+
             color: rgb(255, 236, 236);
             display: flex;
             justify-content: center;
@@ -170,7 +172,10 @@ section#aboutme {
         line-height: 36px;
         letter-spacing: 2px;
     
-
+        h2{
+            padding-bottom: 30px;
+            font-weight: bold;
+        }
         p{
             width:100%;
            
@@ -393,12 +398,9 @@ section#aboutme {
         margin:  auto;
         
         color: white;
-        line-height: 40px;
-        font-size: 22px;
-        
-        
+        line-height: 48px;
+        font-size: 24px;
     }
-    
 }
   
 /* The Close Button */
@@ -411,7 +413,6 @@ section#aboutme {
     justify-content: flex-end;
 
 }
-  
 .close:hover,
 .close:focus {
     color: rgb(255, 191, 14);
@@ -483,7 +484,9 @@ section#Portfolio {
     // }
         h1{
             height: 100%;
-            font-size: 100px;
+            // font-size: 100px;
+            font-size: 64px;
+
             color: rgb(255, 236, 236);
             display: flex;
             justify-content: center;
@@ -511,7 +514,9 @@ section#Portfolio {
     width: 100%;
     // background-color: #A74B4B;
     #Portfolio-all{
-        background-color: #A74B4B;
+        // background-color: #A74B4B;
+        background-color: #e6e0e0;;
+
         .container{
             padding: 30px 0px;
             
@@ -520,6 +525,8 @@ section#Portfolio {
                 width: 100%;
                 height: 400px;
                 cursor: pointer;
+                box-shadow:3px 3px 5px 6px #bababa;
+                border-radius: 10px;
                 .pic{
                     width: 100%;
                     height: 100%;
@@ -546,7 +553,7 @@ section#Portfolio {
                     // 是為了隱藏在圖片放大時超出的部分，
                     p{
                         width: 100%;
-                        font-size: 64px;
+                        font-size: 48px;
                         color: white;
                         text-align: center;
                         text-shadow: 0.1em 0.1em 0.2em black !important ;
@@ -717,7 +724,7 @@ section#Portfolio-ps{
     h2{
         width: 100%;
         padding: 100px 0px 50px 200px;
-        font-size: 64px;
+        font-size:60px;
         margin-bottom: 50px;
         font-weight: bolder;
 
@@ -803,7 +810,7 @@ section#Portfolio-ps{
 
             p{
                 text-align: justify;
-                font-size: 30px;
+                font-size: 24px;
                 color: white;
                 line-height: 60px;
 
@@ -1327,24 +1334,28 @@ section#Portfolio-web{
 // -------------工作經驗 #workexperiece--------------------
 #workexperiece{
    
-        
-    h1.workexperiece-title{
+   
+    .workexperiece-title{
         width: 100%;
         height: 100vh;
         background-color: rgb(58, 58, 58);
-
+        transition:1s;
        
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 64px;
+        
         color: rgb(240, 198, 198);
+        // font-size: 100px;
         
     }
-    // h1{
-    //     font-size: 64px;
-    //     color: rgb(240, 198, 198);
-    // }
+    h2{
+        font-size:64px;
+        color: rgb(240, 198, 198);
+        // color: rgb(30, 159, 18);
+
+    }
+    
     @media (max-width:576px) {
         
           
@@ -1378,6 +1389,9 @@ section#Portfolio-web{
 // 	height: 100vh;
 // 	font-family: 'Montserrat', sans-serif;
 // }
+
+$accent-color:rgb(61, 60, 55);
+
 .wrapper {
 	display: flex;
 	flex-flow: row wrap;
@@ -1453,7 +1467,7 @@ section#Portfolio-web{
 		justify-items: center;
 	}
 
-	h2 {
+	h3 {
 		grid-row: 2;
 		margin-bottom: 0.3em;
 		text-transform: uppercase;
@@ -1637,7 +1651,10 @@ section#Portfolio-web{
 
 // --------專業技能-特效-------
 section#professionalskill{
-    background-color: rgb(76, 76, 100);
+    // background-color: rgb(81, 76, 100);
+    background-color: rgb(211, 211, 211);
+
+    padding-bottom: 30px;
     .professionalskill-title{
         width: 100%;
         height: 100vh;
@@ -1654,6 +1671,7 @@ section#professionalskill{
         line-height: 0.8em;
         color: rgb(240, 198, 198);
         padding: 10px;
+        margin-bottom:50px ;
     }
         
     
@@ -1673,116 +1691,315 @@ section#professionalskill{
         }
         h1 {
             font-size: 36px;
-            
+            margin-bottom:30px ;
         }
         
     }
-    
+ 
    
     
 
-    p{
-        text-align: center;
-        color: white;
+    // p{
+    //     text-align: center;
+    //     color: white;
 
-    }
+    // }
 
-  button:focus,
-  input:focus,
-  textarea:focus,
-  select:focus {
-    outline: none; }
+//   button:focus,
+//   input:focus,
+//   textarea:focus,
+//   select:focus {
+//     outline: none; }
   
-  .tabs {
-    display: block;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    -moz-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin: 0;
-    overflow: hidden; }
-    .tabs [class^="tab"] label,
-    .tabs [class*=" tab"] label {
-      color: #efedef;
-      cursor: pointer;
-      display: block;
-      font-size: 1.25em;
-      font-weight: 300;
-      line-height: 1em;
-      padding: 2rem 0;
+//   .tabs {
+//       height: 60vh;
+//     display: block;
+//     display: -webkit-flex;
+//     display: -moz-flex;
+//     display: flex;
+//     -webkit-flex-wrap: wrap;
+//     -moz-flex-wrap: wrap;
+//     flex-wrap: wrap;
+//     margin: 0;
+//     overflow: hidden; }
+//     .tabs [class^="tab"] label,
+//     .tabs [class*=" tab"] label {
+//       color: #efedef;
+//       cursor: pointer;
+//       display: block;
+//       font-size: 1.25em;
+//       font-weight: 300;
+//       line-height: 1em;
+//       padding: 2rem 0;
 
-      text-align: center; }
-    .tabs [class^="tab"] [type="radio"],
-    .tabs [class*=" tab"] [type="radio"] {
-      border-bottom: 1px solid rgba(239, 237, 239, 0.5);
-      cursor: pointer;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      appearance: none;
-      display: block;
-      width: 100%;
-      -webkit-transition: all 0.3s ease-in-out;
-      -moz-transition: all 0.3s ease-in-out;
-      -o-transition: all 0.3s ease-in-out;
-      transition: all 0.3s ease-in-out; }
-      .tabs [class^="tab"] [type="radio"]:hover, .tabs [class^="tab"] [type="radio"]:focus,
-      .tabs [class*=" tab"] [type="radio"]:hover,
-      .tabs [class*=" tab"] [type="radio"]:focus {
-        // border-bottom: 1px solid #fd264f;
-        border-bottom: 1px solid rgb(228, 156, 147);
+//       text-align: center; }
+//     .tabs [class^="tab"] [type="radio"],
+//     .tabs [class*=" tab"] [type="radio"] {
+//       border-bottom: 1px solid rgba(239, 237, 239, 0.5);
+//       cursor: pointer;
+//       -webkit-appearance: none;
+//       -moz-appearance: none;
+//       appearance: none;
+//       display: block;
+//       width: 100%;
+//       -webkit-transition: all 0.3s ease-in-out;
+//       -moz-transition: all 0.3s ease-in-out;
+//       -o-transition: all 0.3s ease-in-out;
+//       transition: all 0.3s ease-in-out; }
+//       .tabs [class^="tab"] [type="radio"]:hover, .tabs [class^="tab"] [type="radio"]:focus,
+//       .tabs [class*=" tab"] [type="radio"]:hover,
+//       .tabs [class*=" tab"] [type="radio"]:focus {
+//         // border-bottom: 1px solid #fd264f;
+//         border-bottom: 1px solid rgb(228, 156, 147);
 
-     }
-      .tabs [class^="tab"] [type="radio"]:checked,
-      .tabs [class*=" tab"] [type="radio"]:checked {
-        // border-bottom: 2px solid #fd264f; 
-        border-bottom: 2px solid rgb(255, 191, 14);
+//      }
+//       .tabs [class^="tab"] [type="radio"]:checked,
+//       .tabs [class*=" tab"] [type="radio"]:checked {
+//         // border-bottom: 2px solid #fd264f; 
+//         border-bottom: 2px solid rgb(255, 191, 14);
     
-    }
-      .tabs [class^="tab"] [type="radio"]:checked + div,
-      .tabs [class*=" tab"] [type="radio"]:checked + div {
-        opacity: 1; }
-      .tabs [class^="tab"] [type="radio"] + div,
-      .tabs [class*=" tab"] [type="radio"] + div {
-        display: block;
-        opacity: 0;
-        padding: 2rem 0;
-        width: 90%;
-        -webkit-transition: all 0.3s ease-in-out;
-        -moz-transition: all 0.3s ease-in-out;
-        -o-transition: all 0.3s ease-in-out;
-        transition: all 0.3s ease-in-out; }
-    .tabs .tab-2 {
-      width:20%; }
-        .tabs .tab-2 [type="radio"] + div {
-        width: 100%;
-        margin-left: 500%; }
-        .tabs .tab-2 [type="radio"]:checked + div {
-        margin-left: 0; }
-        .tabs .tab-2:nth-child(6n) [type="radio"] + div {
-        margin-left: 100%; }
-        .tabs .tab-2:nth-child(6n) [type="radio"]:checked + div {
-        margin-left: -100%; }
+//     }
+//       .tabs [class^="tab"] [type="radio"]:checked + div,
+//       .tabs [class*=" tab"] [type="radio"]:checked + div {
+//         opacity: 1; }
+//       .tabs [class^="tab"] [type="radio"] + div,
+//       .tabs [class*=" tab"] [type="radio"] + div {
+//         display: block;
+//         opacity: 0;
+//         padding: 2rem 0;
+//         width: 90%;
+//         -webkit-transition: all 0.3s ease-in-out;
+//         -moz-transition: all 0.3s ease-in-out;
+//         -o-transition: all 0.3s ease-in-out;
+//         transition: all 0.3s ease-in-out; }
+//     .tabs .tab-2 {
+//       width:20%; }
+//         .tabs .tab-2 [type="radio"] + div {
+//         width: 100%;
+//         margin-left: 500%; }
+//         .tabs .tab-2 [type="radio"]:checked + div {
+//         margin-left: 0; }
+//         .tabs .tab-2:nth-child(6n) [type="radio"] + div {
+//         margin-left: 100%; }
+//         .tabs .tab-2:nth-child(6n) [type="radio"]:checked + div {
+//         margin-left: -100%; }
         
 
-    @media (max-width:576px) {
-        .tabs .tab-2 {
-            width:33%; }
-    }
-    // .tabs .tab-3 {
-    //     width: 20%; }
-    //      .tabs .tab-3 [type="radio"] + div {
-    //     width: 90%;
-    //     margin-left: 50%; }
-    //     .tabs .tab-3 [type="radio"]:checked + div {
-    //      margin-left: 0; }
-    //     .tabs .tab-3:last-child [type="radio"] + div {
-    //     margin-left: 100%; }
-    //     .tabs .tab-3:last-child  [type="radio"]:checked + div {
-    //      margin-left: -100%; }
-}
+//     @media (max-width:576px) {
+//         .tabs .tab-2 {
+//             width:33%; }
+//     }
+//     // .tabs .tab-3 {
+//     //     width: 20%; }
+//     //      .tabs .tab-3 [type="radio"] + div {
+//     //     width: 90%;
+//     //     margin-left: 50%; }
+//     //     .tabs .tab-3 [type="radio"]:checked + div {
+//     //      margin-left: 0; }
+//     //     .tabs .tab-3:last-child [type="radio"] + div {
+//     //     margin-left: 100%; }
+//     //     .tabs .tab-3:last-child  [type="radio"]:checked + div {
+//     //      margin-left: -100%; }
+// }
 
+
+
+
+//新 專業技能切版-----------------------------
+$color_white: #fff;
+$color_prime: #828c9d;
+$color_grey: #e2e2e2;
+$color_grey_dark: #a2a2a2;
+
+.blog-card {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem auto;
+  box-shadow: 0 3px 7px -1px rgba(#000, .1);
+  margin-bottom: 1.6%;
+  background: $color_white;
+  line-height: 1.4;
+  font-family: sans-serif;
+  border-radius: 5px;
+  overflow: hidden;
+  z-index: 0;
+  font-family: "微軟正黑體";
+  
+  a {
+    color: inherit;
+    // &:hover {
+    //   color: $color_prime;
+    // }
+  }
+  &:hover {
+    .photo {
+      transform: scale(1.3) rotate(3deg);
+    }
+  }
+  .meta {
+    position: relative;
+    z-index: 0;
+    height: 200px;
+  }
+  .photo {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-size: cover;
+    background-position: center;
+    transition: transform .2s;
+  }
+
+    .pic1{
+        background-image: url(../img/skill-1.jpg);
+    }
+    .pic2{
+    background-image: url(../img/skill-2.jpg);
+    }
+    .pic3{
+        background-image: url(../img/skill-3.jpg);
+    }
+    .pic4{
+        background-image: url(../img/skill-4.jpg);
+    }
+  .details,
+  .details ul {
+    margin: auto;
+    padding: 0;
+    list-style: none;
+  }
+
+  .details {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: -100%;
+    margin: auto;
+    transition: left .2s;
+    background: rgba(#000, .6);
+    color: $color_white;
+    padding: 10px;
+    width: 100%;
+    font-size: .9rem;
+    a {
+      text-decoration: dotted underline
+    }
+    ul li {
+      display: inline-block;
+    }
+    .author:before {
+      font-family: FontAwesome;
+      margin-right: 10px;
+      content: "\f007";
+    }
+
+    .date:before {
+      font-family: FontAwesome;
+      margin-right: 10px;
+      content: "\f133";
+    }
+
+    .tags {
+      ul:before {
+        font-family: FontAwesome;
+        content: "\f02b";
+        margin-right: 10px;
+      }
+      li {
+        margin-right: 2px;
+        &:first-child {
+          margin-left: -4px;
+        }
+      }
+    }
+  }
+  .description {
+    padding: 1rem;
+    background: $color_white;
+    position: relative;
+    z-index: 1;
+    
+    h3,
+    span {
+      font-family: Poppins, sans-serif;
+    }
+    h3 {
+      line-height: 1;
+      margin: 0;
+      font-size: 1.7rem;
+      font-family: "微軟正黑體";
+    }
+    span {
+      font-size: 1rem;
+      font-weight: 300;
+      text-transform: uppercase;
+      color: $color_grey_dark;
+      margin-top: 5px;
+    }
+
+  }
+  p {
+    position: relative;
+    margin: 0.3rem 0 0;
+    &:first-of-type {
+    //   margin-top: 1.25rem;
+      &:before {
+        content: "";
+        position: absolute;
+        // height: 5px;
+        // background: $color_prime;
+        width: 35px;
+        top: -0.75rem;
+        border-radius: 3px;
+      }
+    }
+  }
+  &:hover {
+    .details {
+      left: 0%;
+    }
+  }
+
+
+  @media (min-width: 640px) {
+    flex-direction: row;
+    max-width: 700px;
+    .meta {
+      flex-basis: 40%;
+      height: auto;
+    }
+    .description {
+      flex-basis: 60%;
+      &:before {
+        transform: skewX(-3deg);
+        content: "";
+        background: #fff;
+        width: 30px;
+        position: absolute;
+        left: -10px;
+        top: 0;
+        bottom: 0;
+        z-index: -1;
+      }
+    }
+    &.alt {
+      flex-direction: row-reverse;
+      .description {
+        &:before {
+          left: inherit;
+          right: -10px;
+          transform: skew(3deg)
+        }
+      }
+      .details {
+        padding-left: 25px;
+      }
+    }
+  }
+} 
+}
 
 // Top 鍵
 .top {
@@ -1814,3 +2031,4 @@ section#professionalskill{
     font-weight: 900;
     font-size: 40px;
 }
+
