--- a/style/index.css
+++ b/style/index.css
@@ -107,7 +107,7 @@ section#aboutme .abme-title {
 
 section#aboutme h1 {
   height: 100%;
-  font-size: 100px;
+  font-size: 64px;
   color: #ffecec;
   display: -webkit-box;
   display: -webkit-flex;
@@ -148,6 +148,11 @@ section#aboutme #me-text {
   text-align: justify;
   line-height: 36px;
   letter-spacing: 2px;
+}
+
+section#aboutme #me-text h2 {
+  padding-bottom: 30px;
+  font-weight: bold;
 }
 
 section#aboutme #me-text p {
@@ -318,8 +323,8 @@ section#aboutme .Phone_window .A_inbox:hover:after {
   width: 50%;
   margin: auto;
   color: white;
-  line-height: 40px;
-  font-size: 22px;
+  line-height: 48px;
+  font-size: 24px;
 }
 
 /* The Close Button */
@@ -420,7 +425,7 @@ section#Portfolio .Portfolio-title {
 
 section#Portfolio h1 {
   height: 100%;
-  font-size: 100px;
+  font-size: 64px;
   color: #ffecec;
   display: -webkit-box;
   display: -webkit-flex;
@@ -447,7 +452,7 @@ section#Portfolio {
 }
 
 section#Portfolio #Portfolio-all {
-  background-color: #A74B4B;
+  background-color: #e6e0e0;
 }
 
 section#Portfolio #Portfolio-all .container {
@@ -459,6 +464,9 @@ section#Portfolio #Portfolio-all .container .hug {
   width: 100%;
   height: 400px;
   cursor: pointer;
+  -webkit-box-shadow: 3px 3px 5px 6px #bababa;
+          box-shadow: 3px 3px 5px 6px #bababa;
+  border-radius: 10px;
 }
 
 section#Portfolio #Portfolio-all .container .hug .pic {
@@ -497,7 +505,7 @@ section#Portfolio #Portfolio-all .container .hug .mask {
 
 section#Portfolio #Portfolio-all .container .hug .mask p {
   width: 100%;
-  font-size: 64px;
+  font-size: 48px;
   color: white;
   text-align: center;
   text-shadow: 0.1em 0.1em 0.2em black !important;
@@ -599,7 +607,7 @@ section#Portfolio #Portfolio-all .container .pic:hover {
 section#Portfolio-ps h2 {
   width: 100%;
   padding: 100px 0px 50px 200px;
-  font-size: 64px;
+  font-size: 60px;
   margin-bottom: 50px;
   font-weight: bolder;
 }
@@ -676,7 +684,7 @@ section#Portfolio-ps .container-fluid .row .line {
 
 section#Portfolio-ps .container-fluid .row p {
   text-align: justify;
-  font-size: 30px;
+  font-size: 24px;
   color: white;
   line-height: 60px;
   margin: auto;
@@ -1112,6 +1120,9 @@ section#Portfolio-web .row .text .QRcode .teamQR {
   width: 100%;
   height: 100vh;
   background-color: #3a3a3a;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1124,22 +1135,18 @@ section#Portfolio-web .row .text .QRcode .teamQR {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  color: #f0c6c6;
 }
 
-#workexperiece h1 {
+#workexperiece h2 {
   font-size: 64px;
   color: #f0c6c6;
 }
 
 @media (max-width: 576px) {
-  #workexperiece h1 {
-    font-size: 30px;
+  #workexperiece h1.workexperiece-title {
+    font-size: 36px;
   }
-}
-
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 .wrapper {
@@ -1241,7 +1248,7 @@ section#Portfolio-web .row .text .QRcode .teamQR {
   justify-items: center;
 }
 
-.front h2 {
+.front h3 {
   -ms-grid-row: 2;
   grid-row: 2;
   margin-bottom: 0.3em;
@@ -1318,7 +1325,7 @@ section#Portfolio-web .row .text .QRcode .teamQR {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #4a5062;
+  color: #3d3c37;
   -ms-grid-row: 3;
   grid-row: 3;
 }
@@ -1342,9 +1349,9 @@ section#Portfolio-web .row .text .QRcode .teamQR {
 }
 
 .back .info i:before {
-  background: -webkit-linear-gradient(50deg, #4a5062, #438af3);
-  background: -o-linear-gradient(50deg, #4a5062, #438af3);
-  background: linear-gradient(40deg, #4a5062, #438af3);
+  background: -webkit-linear-gradient(50deg, #3d3c37, #438af3);
+  background: -o-linear-gradient(50deg, #3d3c37, #438af3);
+  background: linear-gradient(40deg, #3d3c37, #438af3);
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
@@ -1370,14 +1377,14 @@ section#Portfolio-web .row .text .QRcode .teamQR {
   font-weight: 600;
   line-height: 1.4em;
   overflow: auto;
-  color: #4a5062;
+  color: #3d3c37;
   padding-right: 10px;
 }
 
 .back .location,
 .back .price {
   font-weight: 600;
-  color: #4a5062;
+  color: #3d3c37;
   -ms-grid-row: 1;
   grid-row: 1;
   font-size: 0.86em;
@@ -1433,18 +1440,18 @@ section#Portfolio-web .row .text .QRcode .teamQR {
   -webkit-box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
   text-shadow: none;
-  color: #4a5062;
+  color: #3d3c37;
 }
 
 .button.return {
   line-height: 3em;
-  color: #4a5062;
-  border-color: #4a5062;
+  color: #3d3c37;
+  border-color: #3d3c37;
   text-shadow: none;
 }
 
 .button.return:hover {
-  background-color: #4a5062;
+  background-color: #3d3c37;
   color: #fff;
   -webkit-box-shadow: none;
           box-shadow: none;
@@ -1459,15 +1466,16 @@ section#Portfolio-web .row .text .QRcode .teamQR {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #798199;
+  background: #737167;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #4a5062;
+  background: #3d3c37;
 }
 
 section#professionalskill {
-  background-color: #4c4c64;
+  background-color: lightgray;
+  padding-bottom: 30px;
 }
 
 section#professionalskill .professionalskill-title {
@@ -1494,13 +1502,14 @@ section#professionalskill h1 {
   line-height: 0.8em;
   color: #f0c6c6;
   padding: 10px;
+  margin-bottom: 50px;
 }
 
 @media (max-width: 576px) {
-  section#professionalskill .title {
+  section#professionalskill .professionalskill-title {
     width: 100%;
     height: 100vh;
-    font-size: 48px;
+    font-size: 36px;
     color: #f0c6c6;
     display: -webkit-box;
     display: -webkit-flex;
@@ -1516,113 +1525,232 @@ section#professionalskill h1 {
             align-items: center;
   }
   section#professionalskill h1 {
-    font-size: 30px;
+    font-size: 36px;
+    margin-bottom: 30px;
   }
 }
 
-section#professionalskill p {
-  text-align: center;
-  color: white;
-}
-
-section#professionalskill button:focus,
-section#professionalskill input:focus,
-section#professionalskill textarea:focus,
-section#professionalskill select:focus {
-  outline: none;
-}
-
-section#professionalskill .tabs {
-  display: block;
-  display: -webkit-flex;
-  display: -moz-flex;
+section#professionalskill .blog-card {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 1rem auto;
+  -webkit-box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
+  margin-bottom: 1.6%;
+  background: #fff;
+  line-height: 1.4;
+  font-family: sans-serif;
+  border-radius: 5px;
   overflow: hidden;
+  z-index: 0;
+  font-family: "微軟正黑體";
 }
 
-section#professionalskill .tabs [class^="tab"] label,
-section#professionalskill .tabs [class*=" tab"] label {
-  color: #efedef;
-  cursor: pointer;
-  display: block;
-  font-size: 1.25em;
+section#professionalskill .blog-card a {
+  color: inherit;
+}
+
+section#professionalskill .blog-card:hover .photo {
+  -webkit-transform: scale(1.3) rotate(3deg);
+      -ms-transform: scale(1.3) rotate(3deg);
+          transform: scale(1.3) rotate(3deg);
+}
+
+section#professionalskill .blog-card .meta {
+  position: relative;
+  z-index: 0;
+  height: 200px;
+}
+
+section#professionalskill .blog-card .photo {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-size: cover;
+  background-position: center;
+  -webkit-transition: -webkit-transform .2s;
+  transition: -webkit-transform .2s;
+  -o-transition: transform .2s;
+  transition: transform .2s;
+  transition: transform .2s, -webkit-transform .2s;
+}
+
+section#professionalskill .blog-card .pic1 {
+  background-image: url(../img/skill-1.jpg);
+}
+
+section#professionalskill .blog-card .pic2 {
+  background-image: url(../img/skill-2.jpg);
+}
+
+section#professionalskill .blog-card .pic3 {
+  background-image: url(../img/skill-3.jpg);
+}
+
+section#professionalskill .blog-card .pic4 {
+  background-image: url(../img/skill-4.jpg);
+}
+
+section#professionalskill .blog-card .details,
+section#professionalskill .blog-card .details ul {
+  margin: auto;
+  padding: 0;
+  list-style: none;
+}
+
+section#professionalskill .blog-card .details {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: -100%;
+  margin: auto;
+  -webkit-transition: left .2s;
+  -o-transition: left .2s;
+  transition: left .2s;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  padding: 10px;
+  width: 100%;
+  font-size: .9rem;
+}
+
+section#professionalskill .blog-card .details a {
+  -webkit-text-decoration: dotted underline;
+          text-decoration: dotted underline;
+}
+
+section#professionalskill .blog-card .details ul li {
+  display: inline-block;
+}
+
+section#professionalskill .blog-card .details .author:before {
+  font-family: FontAwesome;
+  margin-right: 10px;
+  content: "\f007";
+}
+
+section#professionalskill .blog-card .details .date:before {
+  font-family: FontAwesome;
+  margin-right: 10px;
+  content: "\f133";
+}
+
+section#professionalskill .blog-card .details .tags ul:before {
+  font-family: FontAwesome;
+  content: "\f02b";
+  margin-right: 10px;
+}
+
+section#professionalskill .blog-card .details .tags li {
+  margin-right: 2px;
+}
+
+section#professionalskill .blog-card .details .tags li:first-child {
+  margin-left: -4px;
+}
+
+section#professionalskill .blog-card .description {
+  padding: 1rem;
+  background: #fff;
+  position: relative;
+  z-index: 1;
+}
+
+section#professionalskill .blog-card .description h3,
+section#professionalskill .blog-card .description span {
+  font-family: Poppins, sans-serif;
+}
+
+section#professionalskill .blog-card .description h3 {
+  line-height: 1;
+  margin: 0;
+  font-size: 1.7rem;
+  font-family: "微軟正黑體";
+}
+
+section#professionalskill .blog-card .description span {
+  font-size: 1rem;
   font-weight: 300;
-  line-height: 1em;
-  padding: 2rem 0;
-  text-align: center;
+  text-transform: uppercase;
+  color: #a2a2a2;
+  margin-top: 5px;
 }
 
-section#professionalskill .tabs [class^="tab"] [type="radio"],
-section#professionalskill .tabs [class*=" tab"] [type="radio"] {
-  border-bottom: 1px solid rgba(239, 237, 239, 0.5);
-  cursor: pointer;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  display: block;
-  width: 100%;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+section#professionalskill .blog-card p {
+  position: relative;
+  margin: 0.3rem 0 0;
 }
 
-section#professionalskill .tabs [class^="tab"] [type="radio"]:hover, section#professionalskill .tabs [class^="tab"] [type="radio"]:focus,
-section#professionalskill .tabs [class*=" tab"] [type="radio"]:hover,
-section#professionalskill .tabs [class*=" tab"] [type="radio"]:focus {
-  border-bottom: 1px solid #e49c93;
+section#professionalskill .blog-card p:first-of-type:before {
+  content: "";
+  position: absolute;
+  width: 35px;
+  top: -0.75rem;
+  border-radius: 3px;
 }
 
-section#professionalskill .tabs [class^="tab"] [type="radio"]:checked,
-section#professionalskill .tabs [class*=" tab"] [type="radio"]:checked {
-  border-bottom: 2px solid #ffbf0e;
+section#professionalskill .blog-card:hover .details {
+  left: 0%;
 }
 
-section#professionalskill .tabs [class^="tab"] [type="radio"]:checked + div,
-section#professionalskill .tabs [class*=" tab"] [type="radio"]:checked + div {
-  opacity: 1;
-}
-
-section#professionalskill .tabs [class^="tab"] [type="radio"] + div,
-section#professionalskill .tabs [class*=" tab"] [type="radio"] + div {
-  display: block;
-  opacity: 0;
-  padding: 2rem 0;
-  width: 90%;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-section#professionalskill .tabs .tab-2 {
-  width: 20%;
-}
-
-section#professionalskill .tabs .tab-2 [type="radio"] + div {
-  width: 100%;
-  margin-left: 500%;
-}
-
-section#professionalskill .tabs .tab-2 [type="radio"]:checked + div {
-  margin-left: 0;
-}
-
-section#professionalskill .tabs .tab-2:nth-child(6n) [type="radio"] + div {
-  margin-left: 100%;
-}
-
-section#professionalskill .tabs .tab-2:nth-child(6n) [type="radio"]:checked + div {
-  margin-left: -100%;
-}
-
-@media (max-width: 576px) {
-  section#professionalskill .tabs .tab-2 {
-    width: 33%;
+@media (min-width: 640px) {
+  section#professionalskill .blog-card {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    max-width: 700px;
+  }
+  section#professionalskill .blog-card .meta {
+    -webkit-flex-basis: 40%;
+        -ms-flex-preferred-size: 40%;
+            flex-basis: 40%;
+    height: auto;
+  }
+  section#professionalskill .blog-card .description {
+    -webkit-flex-basis: 60%;
+        -ms-flex-preferred-size: 60%;
+            flex-basis: 60%;
+  }
+  section#professionalskill .blog-card .description:before {
+    -webkit-transform: skewX(-3deg);
+        -ms-transform: skewX(-3deg);
+            transform: skewX(-3deg);
+    content: "";
+    background: #fff;
+    width: 30px;
+    position: absolute;
+    left: -10px;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+  section#professionalskill .blog-card.alt {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: row-reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+  section#professionalskill .blog-card.alt .description:before {
+    left: inherit;
+    right: -10px;
+    -webkit-transform: skew(3deg);
+        -ms-transform: skew(3deg);
+            transform: skew(3deg);
+  }
+  section#professionalskill .blog-card.alt .details {
+    padding-left: 25px;
   }
 }
 
